hyprland: add keybind for 1Password Quick Access
Under Hyprland, this has to be done in hyprland.conf. An app can’t
register global keybindings.

--- a/hyprland/.config/hypr/keybindings.html
+++ b/hyprland/.config/hypr/keybindings.html
@@ -233,6 +233,10 @@
           <td>Launch wofi (app launcher)</td>
         </tr>
         <tr>
+          <td><code>Super+Ctrl+Space</code></td>
+          <td>Launch 1Password Quick Access</td>
+        </tr>
+        <tr>
           <td><code>Super+Return</code></td>
           <td>Launch kitty (terminal)</td>
         </tr>
