hyprland: start emacs in server mode

--- a/hyprland/.config/hypr/keybindings.html
+++ b/hyprland/.config/hypr/keybindings.html
@@ -249,6 +249,10 @@
           <td>GoldenDict lookup (clipboard)</td>
         </tr>
         <tr>
+          <td><code>Super+Ctrl+E</code></td>
+          <td>Launch Emacs (Client)</td>
+        </tr>
+        <tr>
           <td><code>Super+Ctrl+S</code></td>
           <td>Screenshot window</td>
         </tr>
