hyprland: bind Super+Shift+Escape to quit Hyprland

--- a/hyprland/.config/hypr/keybindings.html
+++ b/hyprland/.config/hypr/keybindings.html
@@ -355,6 +355,22 @@
       </tbody>
     </table>
 
+    <h2>Hyprland</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Key</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><code>Super+Shift+Escape</code></td>
+          <td>Quit Hyprland</td>
+        </tr>
+      </tbody>
+    </table>
+
     <h2>Mouse Buttons</h2>
     <ul>
       <li>LMB = Left Mouse Button (272)</li>
