hyprland: add binding for maximising a window

--- a/hyprland/.config/hypr/keybindings.html
+++ b/hyprland/.config/hypr/keybindings.html
@@ -306,6 +306,10 @@
       <tbody>
         <tr>
           <td><code>Super+F</code></td>
+          <td>Toggle maximise</td>
+        </tr>
+        <tr>
+          <td><code>Super+Ctrl+F</code></td>
           <td>Toggle fullscreen</td>
         </tr>
         <tr>
